--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/query-async-storage-persister": "^5.90.18",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-persist-client": "^5.90.18",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "react": "^19.2.0",
